# panda_mujoco_ros

exercise5/: CMakeLists.txt
exercise5/config/: controllers.yaml
exercise5/data/: data.ods
exercise5/include/exercise5/: Exercise5Controller.h  ForceController.h  Robot.h
exercise5/launch/: sim.launch
exercise5/model/robots/: robot_table_motor_actuator.xml  sim.urdf
exercise5/src/: Exercise5Controller(Backup).cpp  Exercise5Controller.cpp  ForceController.cpp  Robot.cpp  exercise5_ideal_ff.csv  exercise5_real_ff.csv  exercise5_real_ff_fb.csv  panda.cpp  run.cpp
mujoco_ros_control/: CMakeLists.txt  package.xml
mujoco_ros_control/include/mujoco_ros_control/: RenderImage.h  RobotHWMujoco.h
mujoco_ros_control/src/: RenderImage.cpp  RobotHWMujoco.cpp  mujoco_control.cpp
panda_controllers/: CMakeLists.txt  package.xml  panda_controllers_plugin.xml
panda_controllers/config/: controllers.yaml  controllers_real.yaml  controllers_sim.yaml  pushing.xml  ylimits.xml
panda_controllers/include/panda_controllers/: ForceController_KDL.h  ForceController_Real.h  ForceController_Sim.h  ForceController_noKDL.h  GravityCompensation_Real.h  HybridController_KDL.h  HybridController_Sim.h  panda.h
panda_controllers/launch/: ForceController_Real.launch  GravityCompensation_real.launch  sim.launch
panda_controllers/model/meshes/: hockeyPuck.stl
panda_controllers/model/robots/: robot_table_env.urdf  robot_table_env_motor_actuator.xml  robot_table_motor_actuator.xml  sim.urdf  sim.urdf.xacro
panda_controllers/src/: ForceController_KDL.cpp  ForceController_Real.cpp  ForceController_Sim.cpp  ForceController_noKDL.cpp  GravityCompensation_Real.cpp  HybridController.cpp  HybridController_KDL.cpp  HybridController_Sim.cpp  Robot.cpp  parser.cpp  run.cpp  show.py
