<?xml version="1.0"?>
<package format="2">
  <name>panda_controllers</name>
  <version>1.0.0</version>
  <description>
    Package panda_controllers.
  </description>
  <maintainer email="nguyenle.tran@aalto.fi">Vladimir Petrik</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>moveit_core</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>kdl_parser</depend>
  <depend>urdf</depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>

  <export>
    <controller_interface plugin="${prefix}/panda_controllers_plugin.xml"/>
  </export>


</package>
